init several component

--- a/spa_react/src/page/dashboard-page/Dashboard.scss
+++ b/spa_react/src/page/dashboard-page/Dashboard.scss
@@ -1,1 +1,11 @@
+.dashboard-container {
 
+  .dashboard-header-title {
+    font-size: 4rem;
+  }
+
+  .main-content {
+    height: 65vh;
+    overflow-y: auto;
+  }
+}
