--- a/spa_react/src/page/dashboard-page/Dashboard.scss
+++ b/spa_react/src/page/dashboard-page/Dashboard.scss
@@ -1,11 +1,14 @@
 .dashboard-container {
+  >div {
+    padding: 0 10px;
+  }
 
   .dashboard-header-title {
-    font-size: 4rem;
+    font-size: 2rem;
   }
 
   .main-content {
-    height: 65vh;
+    height: 100%;
     overflow-y: auto;
   }
 }
