create action loader structure

--- a/spa_react/src/component/mermaid-diagram/mermaid-diagram.scss
+++ b/spa_react/src/component/mermaid-diagram/mermaid-diagram.scss
@@ -18,4 +18,8 @@ $mermaid-code-and-preview-height: 470px;
   .error-overlay-text {
     font-size: 12px;
   }
+
+  .mermaid-diagram-show-code-text {
+    padding: 0 10px;
+  }
 }
