create add project dialog, un-finished yet

--- a/spa_react/src/component/shared-component/CustomDialog.scss
+++ b/spa_react/src/component/shared-component/CustomDialog.scss
@@ -1,4 +1,9 @@
 .custom-dialog-container {
+
+  .custom-dialog-content {
+    padding: 15px 10px !important;
+  }
+
   .custom-dialog-footer {
     padding-bottom: 200px;
   }
