--- a/spa_react/src/component/shared-component/project-properties/ProjectProperties.scss
+++ b/spa_react/src/component/shared-component/project-properties/ProjectProperties.scss
@@ -1,1 +1,9 @@
 .project-properties-container {}
+
+.change-title-anchor-component-container {
+  padding: 10px 20px;
+
+  &>div {
+    margin-bottom: 5px;
+  }
+}
