[11-14-1600] add several RSJF basic custom component

--- a/spa_react/src/component/shared-component/CustomDialog.scss
+++ b/spa_react/src/component/shared-component/CustomDialog.scss
@@ -2,6 +2,7 @@
 
   .custom-dialog-content {
     padding: 15px 10px !important;
+    overscroll-behavior-y: auto;
   }
 
   .custom-dialog-footer {
