--- a/spa_react/src/component/shared-component/ImageViewer.scss
+++ b/spa_react/src/component/shared-component/ImageViewer.scss
@@ -1,4 +1,7 @@
 .image-viewer-container {
+  width: 100%;
+  height: 100%;
+
   .image-viewer-caption {
     align-self: center;
     font-size: 13px;
