[11-21-2056] add automatic api client endpoint generation with hey api openapi-ts

--- a/spa_react/src/component/shared-component/table-component/TableComponent.scss
+++ b/spa_react/src/component/shared-component/table-component/TableComponent.scss
@@ -1,4 +1,18 @@
+$header-max-width: 100px;
+
 .table-component-container {
+  .table-image-header {
+    max-width: $header-max-width;
+
+    &_text {
+      font-weight: bold;
+    }
+  }
+
+  .table-description-header {
+    max-width: $header-max-width;
+  }
+
   .table-component-image {
     max-width: 100px;
   }
