--- a/learn-auth/SPA/app/page/DashboardPage.css
+++ b/learn-auth/SPA/app/page/DashboardPage.css
@@ -1,3 +1,17 @@
+.dashboard-page {
+  header {
+    h1 {
+      margin-bottom: -10px;
+    }
+  }
+
+  main {
+    h2 {
+      margin-top: 0;
+    }
+  }
+}
+
 .login-container {
   display: flex;
   justify-content: center;
